# bookapi-microservice

./: .gitignore  BookApp.postman_collection.json  README.md  compose.yaml  pyproject.toml
admin-api/: Dockerfile  main.py  pyproject.toml  pytest.ini
admin-api/core/: config.py  db.py  errors.py
admin-api/crud/: __init__.py  book.py  borrow_book.py
admin-api/endpoints/: __init__.py  books.py
admin-api/models/: __init__.py  book.py
admin-api/schemas/: books.py
admin-api/tests/: conftest.py
admin-api/tests/endpoints/: test_book.py
admin-api/tests/sample_datas/: book_samples.py
admin-api/utils/: generate_otp.py
frontend-api/: Dockerfile  pyproject.toml
frontend-api/core/: config.py  errors.py  tokens.py
frontend-api/crud/: __init__.py  auth.py  book.py
frontend-api/endpoints/: __init__.py  auth.py  books.py
frontend-api/models/: __init__.py  auth_user.py  book.py
frontend-api/schemas/: __init__.py  auth_user.py  books.py
frontend-api/tests/: conftest.py
frontend-api/tests/endpoints/: test_auth.py
frontend-api/tests/sample_datas/: auth_user_samples.py
frontend-api/utils/: get_countries.py  send_email.py
